[#55] Rename /search -> /search/trials and add /search/locations
The user will be able to search on more than just trials. This commit adds
locations and sets up the structure for adding other entities. It also adds
seeds for locations, and make `npm run reindex` index them as well.
